--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,8 @@ PORT=5000
 MONGO_URI=mongodb://127.0.0.1:27017/ramadreams_admin
 JWT_SECRET=change_this_secret
 JWT_EXPIRES_IN=7d
-CLIENT_ORIGINS=http://localhost:5174,http://localhost:3000
+CLIENT_ORIGINS=http://localhost:5174,http://localhost:3000,https://adminfrontend.ramadreamsgroup.com,https://ramadreamsgroup.com,https://www.ramadreamsgroup.com
+CLIENT_ORIGIN_PATTERNS=https://ramadreams-group-*.vercel.app
 ADMIN_NAME=Ramadreams Admin
 ADMIN_EMAIL=admin@ramadreamsgroup.com
 ADMIN_PASSWORD=ChangeThis123!
